<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSQLiteDatabase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="get_image">Get Image</string>
    <string name="save_image">Save Image</string>
    <string name="read_image">Read Image</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="clear_database">Clear Database</string>

</resources>
