<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MyActivity">

    <TextView
        android:id="@+id/text_view_image_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_image_selected"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/get_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_image"/>

    <Button
        android:id="@+id/save_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_image"/>

    <Button
        android:id="@+id/read_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_image"/>

    <Button
        android:id="@+id/clear_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_database"/>


        <!--<ImageView
            android:id="@+id/imageView_image"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </ImageView>

            <Button
                android:id="@+id/button_insert"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Insert In DB"/>
            <Button
                android:id="@+id/button_retrieve"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Retrieve from DB"/>-->

</LinearLayout>
